--- a/TODO/2601160714-Tasks.md
+++ b/TODO/2601160714-Tasks.md
@@ -7,8 +7,8 @@
   - [x] Fix 404s for Static Resources (Live2D Core, Locales) <!-- id: 4 -->
   - [x] Resolve AtomSpace Connection Refused (Implement/Mock/Disable) <!-- id: 5 -->
 - [ ] **Deep Tree Echo Autonomy** <!-- id: 6 -->
-  - [ ] Verify Proactive Action Kernel initialization <!-- id: 7 -->
-  - [ ] Verify Bot Settings Persistence <!-- id: 8 -->
-- [ ] **Verification** <!-- id: 9 -->
-  - [ ] Full Build `pnpm build:browser` <!-- id: 10 -->
-  - [ ] Runtime Verification (Start Server & Check Console) <!-- id: 11 -->
+  - [x] Verify Proactive Action Kernel initialization <!-- id: 7 -->
+  - [x] Verify Bot Settings Persistence <!-- id: 8 -->
+- [x] **Verification** <!-- id: 9 -->
+  - [x] Full Build `pnpm build:browser` <!-- id: 10 -->
+  - [x] Runtime Verification (Start Server & Check Console) <!-- id: 11 -->
